# experiments

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
00_multi_threaded_unique_id_exp/: main.cpp
01_map_erase_exp/: CMakeLists.txt  main.cpp
02_type_hash_exp/: main.cpp
03_inheritance_exp/: main.cpp
04_profiler_exp/: CMakeLists.txt  main.cpp
05_allocation_exp/: CMakeLists.txt  main.cpp
06_tmp_exp/: main.cpp
07_static_dtro_exp/: main.cpp
08_multithreaded_communication/: main.cpp
09_event_types/: main.cpp
09_type_info/: main.cpp
10_enable_if_member_function/: main.cpp
11_variadic_templates_type_deduction_error/: main.cpp
template/: main.cpp
